@@ -17,26 +17,28 @@ import com.minecolonies.api.entity.citizen.Skill;
 import com.minecolonies.api.entity.citizen.VisibleCitizenStatus;
 import com.minecolonies.api.entity.citizen.citizenhandlers.ICitizenSkillHandler;
 import com.minecolonies.api.inventory.InventoryCitizen;
+import com.minecolonies.api.quests.IQuestDeliveryObjective;
+import com.minecolonies.api.quests.IQuestInstance;
+import com.minecolonies.api.quests.IQuestManager;
 import com.minecolonies.api.util.*;
 import com.minecolonies.api.util.constant.Suppression;
 import com.minecolonies.coremod.MineColonies;
 import com.minecolonies.coremod.colony.buildings.modules.LivingBuildingModule;
 import com.minecolonies.coremod.colony.buildings.modules.WorkerBuildingModule;
+import com.minecolonies.coremod.colony.interactionhandling.QuestDeliveryInteraction;
+import com.minecolonies.coremod.colony.interactionhandling.QuestDialogueInteraction;
 import com.minecolonies.coremod.colony.interactionhandling.ServerCitizenInteraction;
 import com.minecolonies.coremod.colony.interactionhandling.StandardInteraction;
-import com.minecolonies.coremod.entity.ai.basic.AbstractAISkeleton;
 import com.minecolonies.coremod.entity.citizen.EntityCitizen;
 import com.minecolonies.coremod.entity.citizen.citizenhandlers.CitizenHappinessHandler;
 import com.minecolonies.coremod.entity.citizen.citizenhandlers.CitizenMournHandler;
 import com.minecolonies.coremod.entity.citizen.citizenhandlers.CitizenSkillHandler;
 import com.minecolonies.coremod.util.AttributeModifierUtils;
 import net.minecraft.core.BlockPos;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.IntTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.Tag;
+import net.minecraft.nbt.*;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.Entity;
@@ -51,7 +53,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.lang.ref.WeakReference;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.minecolonies.api.entity.citizen.AbstractEntityCitizen.*;
 import static com.minecolonies.api.research.util.ResearchConstants.HEALTH_BOOST;
@@ -59,6 +60,7 @@ import static com.minecolonies.api.research.util.ResearchConstants.WALKING;
 import static com.minecolonies.api.util.ItemStackUtils.CAN_EAT;
 import static com.minecolonies.api.util.constant.BuildingConstants.TAG_ACTIVE;
 import static com.minecolonies.api.util.constant.CitizenConstants.*;
+import static com.minecolonies.api.util.constant.Constants.TAG_STRING;
 import static com.minecolonies.api.util.constant.NbtTagConstants.*;
 import static com.minecolonies.api.util.constant.TranslationConstants.*;
 import static com.minecolonies.api.util.constant.translation.DebugTranslationConstants.DEBUG_WARNING_CITIZEN_LOAD_FAILURE;
@@ -273,6 +275,26 @@ public class CitizenData implements ICitizenData
     private int inactivityTimer = DISABLED;
 
     /**
+     * The list of available quests the citizen can give out.
+     */
+    private final List<ResourceLocation> availableQuests = new ArrayList<>();
+
+    /**
+     * The list of participating quests the citizen can give out.
+     */
+    private final List<ResourceLocation> participatingQuests = new ArrayList<>();
+
+    /**
+     * Tracking quests the citizen was the quest giver in.
+     */
+    private final List<ResourceLocation> finishedQuests = new ArrayList<>();
+
+    /**
+     * Tracking quests the citizen participated in.
+     */
+    private final List<ResourceLocation> finishedQuestParticipation = new ArrayList<>();
+
+    /**
      * The sound profile index.
      */
     private int soundProfile;
@@ -294,11 +316,11 @@ public class CitizenData implements ICitizenData
     }
 
     @Override
-    public void onResponseTriggered(@NotNull final Component key, @NotNull final Component response, final Player player)
+    public void onResponseTriggered(@NotNull final Component key, final int responseId, final Player player)
     {
         if (citizenChatOptions.containsKey(key))
         {
-            citizenChatOptions.get(key).onServerResponseTriggered(response, player, this);
+            citizenChatOptions.get(key).onServerResponseTriggered(responseId, player, this);
             markDirty();
         }
     }
@@ -347,7 +369,7 @@ public class CitizenData implements ICitizenData
     /**
      * Returns a random element in a list.
      *
-     * @param rand  Random object.
+     * @param rand Random object.
      * @param list Array to select from.
      * @return Random element from array.
      */
@@ -462,6 +484,11 @@ public class CitizenData implements ICitizenData
         citizen.getEntityData().set(DATA_JOB, getJob() == null ? "" : getJob().getJobRegistryEntry().getKey().toString());
         citizen.getEntityData().set(DATA_STYLE, colony.getTextureStyleId());
 
+        if (getBedPos().equals(BlockPos.ZERO))
+        {
+            citizen.getCitizenSleepHandler().onWakeUp();
+        }
+
         // Safety check that ensure the citizen its job matches the work building job
         if (getJob() != null && workBuilding != null)
         {
@@ -524,7 +551,7 @@ public class CitizenData implements ICitizenData
     /**
      * Generates a random name from a set of names.
      *
-     * @param rand Random object.
+     * @param rand   Random object.
      * @param female the gender
      * @param colony the colony.
      * @return Name of the citizen.
@@ -629,7 +656,7 @@ public class CitizenData implements ICitizenData
         {
             if (nameFile.parts == 3)
             {
-                middleInitial = firstParentNameSplit[eastern? 0 : firstParentNameSplit.length - 1].substring(0, 1);
+                middleInitial = firstParentNameSplit[eastern ? 0 : firstParentNameSplit.length - 1].substring(0, 1);
                 lastName = secondParentNameSplit[eastern ? 0 : secondParentNameSplit.length - 1];
             }
             else
@@ -696,7 +723,8 @@ public class CitizenData implements ICitizenData
     @Override
     public boolean isRelatedTo(final ICitizenData data)
     {
-        return siblings.contains(data.getId()) || children.contains(data.getId()) || partner == data.getId() || parents.getA().equals(data.getName()) || parents.getB().equals(data.getName());
+        return siblings.contains(data.getId()) || children.contains(data.getId()) || partner == data.getId() || parents.getA().equals(data.getName()) || parents.getB()
+          .equals(data.getName());
     }
 
     @Override
@@ -838,14 +866,6 @@ public class CitizenData implements ICitizenData
             }
             else if (job != null)
             {
-                getEntity().ifPresent(entityCitizen -> {
-                    entityCitizen.getTasks()
-                      .availableGoals.stream()
-                      .filter(task -> task.getGoal() instanceof AbstractAISkeleton)
-                      .findFirst()
-                      .ifPresent(e -> entityCitizen.getTasks().removeGoal(e));
-                });
-
                 //  No place of employment, get rid of our job
                 setJob(null);
                 colony.getWorkManager().clearWorkForCitizen(this);
@@ -939,7 +959,7 @@ public class CitizenData implements ICitizenData
         buf.writeFloat(getEntity().map(AbstractEntityCitizen::getMaxHealth).orElse(MAX_HEALTH));
 
         buf.writeDouble(getSaturation());
-        buf.writeDouble(citizenHappinessHandler.getHappiness(getColony()));
+        buf.writeDouble(citizenHappinessHandler.getHappiness(getColony(), this));
 
         buf.writeNbt(citizenSkillHandler.write());
 
@@ -954,7 +974,7 @@ public class CitizenData implements ICitizenData
 
         if (colony.getWorld() != null)
         {
-            final List<IInteractionResponseHandler> subInteractions = citizenChatOptions.values().stream().filter(e -> e.isVisible(colony.getWorld())).collect(Collectors.toList());
+            final List<IInteractionResponseHandler> subInteractions = citizenChatOptions.values().stream().filter(e -> e.isVisible(colony.getWorld())).toList();
 
             buf.writeInt(subInteractions.size());
             for (final IInteractionResponseHandler interactionHandler : subInteractions)
@@ -1000,6 +1020,18 @@ public class CitizenData implements ICitizenData
         }
         buf.writeUtf(parents.getA());
         buf.writeUtf(parents.getB());
+
+        buf.writeInt(availableQuests.size());
+        for (final ResourceLocation av : availableQuests)
+        {
+            buf.writeResourceLocation(av);
+        }
+
+        buf.writeInt(participatingQuests.size());
+        for (final ResourceLocation av : participatingQuests)
+        {
+            buf.writeResourceLocation(av);
+        }
     }
 
     @Override
@@ -1217,6 +1249,36 @@ public class CitizenData implements ICitizenData
         nbtTagCompound.putInt(TAG_PARTNER, partner);
         nbtTagCompound.putBoolean(TAG_ACTIVE, this.isWorking);
 
+
+        @NotNull final ListTag avQuestNBT = new ListTag();
+        for (final ResourceLocation quest : availableQuests)
+        {
+            avQuestNBT.add(StringTag.valueOf(quest.toString()));
+        }
+        nbtTagCompound.put(TAG_AV_QUESTS, avQuestNBT);
+
+        @NotNull final ListTag partQuestNBT = new ListTag();
+        for (final ResourceLocation quest : participatingQuests)
+        {
+            partQuestNBT.add(StringTag.valueOf(quest.toString()));
+        }
+        nbtTagCompound.put(TAG_PART_QUESTS, partQuestNBT);
+
+        @NotNull final ListTag finishedQuestNBT = new ListTag();
+        for (final ResourceLocation quest : finishedQuests)
+        {
+            finishedQuestNBT.add(StringTag.valueOf(quest.toString()));
+        }
+        nbtTagCompound.put(TAG_FINISHED_AV_QUESTS, finishedQuestNBT);
+
+        @NotNull final ListTag finishedPartQuestNBT = new ListTag();
+        for (final ResourceLocation quest : finishedQuestParticipation)
+        {
+            finishedPartQuestNBT.add(StringTag.valueOf(quest.toString()));
+        }
+        nbtTagCompound.put(TAG_FINISHED_PART_QUESTS, finishedPartQuestNBT);
+
+
         return nbtTagCompound;
     }
 
@@ -1258,12 +1320,12 @@ public class CitizenData implements ICitizenData
 
         saturation = nbtTagCompound.getDouble(TAG_SATURATION);
 
-        if (nbtTagCompound.getAllKeys().contains("job"))
+        if (nbtTagCompound.contains("job"))
         {
             setJob(IJobDataManager.getInstance().createFrom(this, nbtTagCompound.getCompound("job")));
         }
 
-        if (nbtTagCompound.getAllKeys().contains(TAG_INVENTORY))
+        if (nbtTagCompound.contains(TAG_INVENTORY))
         {
             final ListTag nbttaglist = nbtTagCompound.getList(TAG_INVENTORY, 10);
             this.inventory.read(nbttaglist);
@@ -1276,37 +1338,44 @@ public class CitizenData implements ICitizenData
             name = generateName(random, isFemale(), getColony(), getColony().getCitizenNameFile());
         }
 
-        if (nbtTagCompound.getAllKeys().contains(TAG_ASLEEP))
+        if (nbtTagCompound.contains(TAG_ASLEEP))
         {
             bedPos = BlockPosUtil.read(nbtTagCompound, TAG_BEDS);
             isAsleep = nbtTagCompound.getBoolean(TAG_ASLEEP);
         }
 
-        if (nbtTagCompound.getAllKeys().contains(TAG_JUST_ATE))
+        if (nbtTagCompound.contains(TAG_JUST_ATE))
         {
             justAte = nbtTagCompound.getBoolean(TAG_JUST_ATE);
         }
 
         //  Citizen chat options.
-        if (nbtTagCompound.getAllKeys().contains(TAG_CHAT_OPTIONS))
+        if (nbtTagCompound.contains(TAG_CHAT_OPTIONS))
         {
             final ListTag handlerTagList = nbtTagCompound.getList(TAG_CHAT_OPTIONS, Tag.TAG_COMPOUND);
             for (int i = 0; i < handlerTagList.size(); ++i)
             {
-                final ServerCitizenInteraction handler =
-                  (ServerCitizenInteraction) MinecoloniesAPIProxy.getInstance()
-                                               .getInteractionResponseHandlerDataManager()
-                                               .createFrom(this, handlerTagList.getCompound(i).getCompound(TAG_CHAT_OPTION));
-                citizenChatOptions.put(handler.getInquiry(), handler);
+                try
+                {
+                    final ServerCitizenInteraction handler =
+                      (ServerCitizenInteraction) MinecoloniesAPIProxy.getInstance()
+                        .getInteractionResponseHandlerDataManager()
+                        .createFrom(this, handlerTagList.getCompound(i).getCompound(TAG_CHAT_OPTION));
+                    citizenChatOptions.put(handler.getId(), handler);
+                }
+                catch (final Exception ex)
+                {
+                    Log.getLogger().warn("Failed to load Interaction for a quest. Did the quest vanish?", ex);
+                }
             }
         }
 
         this.citizenHappinessHandler.read(nbtTagCompound);
         this.citizenMournHandler.read(nbtTagCompound);
 
-        if (nbtTagCompound.getAllKeys().contains(TAG_LEVEL_MAP) && !nbtTagCompound.getAllKeys().contains(TAG_NEW_SKILLS))
+        if (nbtTagCompound.contains(TAG_LEVEL_MAP) && !nbtTagCompound.contains(TAG_NEW_SKILLS))
         {
-            citizenSkillHandler.init((int) citizenHappinessHandler.getHappiness(getColony()));
+            citizenSkillHandler.init((int) citizenHappinessHandler.getHappiness(getColony(), this));
             final Map<String, Integer> levels = new HashMap<>();
             final ListTag levelTagList = nbtTagCompound.getList(TAG_LEVEL_MAP, Tag.TAG_COMPOUND);
             for (int i = 0; i < levelTagList.size(); ++i)
@@ -1347,6 +1416,30 @@ public class CitizenData implements ICitizenData
 
         partner = nbtTagCompound.getInt(TAG_PARTNER);
         this.isWorking = nbtTagCompound.getBoolean(TAG_ACTIVE);
+
+        @NotNull final ListTag availQuestNbt = nbtTagCompound.getList(TAG_AV_QUESTS, TAG_STRING);
+        for (int i = 0; i < availQuestNbt.size(); i++)
+        {
+            availableQuests.add(new ResourceLocation(availQuestNbt.getString(i)));
+        }
+
+        @NotNull final ListTag partQuestsNbt = nbtTagCompound.getList(TAG_PART_QUESTS, TAG_STRING);
+        for (int i = 0; i < partQuestsNbt.size(); i++)
+        {
+            participatingQuests.add(new ResourceLocation(partQuestsNbt.getString(i)));
+        }
+
+        @NotNull final ListTag finQuestNbt = nbtTagCompound.getList(TAG_FINISHED_AV_QUESTS, TAG_STRING);
+        for (int i = 0; i < finQuestNbt.size(); i++)
+        {
+            finishedQuests.add(new ResourceLocation(finQuestNbt.getString(i)));
+        }
+
+        @NotNull final ListTag finPartQuestsNbt = nbtTagCompound.getList(TAG_FINISHED_PART_QUESTS, TAG_STRING);
+        for (int i = 0; i < finPartQuestsNbt.size(); i++)
+        {
+            finishedQuestParticipation.add(new ResourceLocation(finPartQuestsNbt.getString(i)));
+        }
     }
 
     @Override
@@ -1388,12 +1481,12 @@ public class CitizenData implements ICitizenData
 
         for (final IInteractionResponseHandler handler : toRemove)
         {
-            citizenChatOptions.remove(handler.getInquiry());
+            citizenChatOptions.remove(handler.getId());
             for (final Component comp : handler.getPossibleResponses())
             {
                 if (citizenChatOptions.containsKey(handler.getResponseResult(comp)))
                 {
-                    citizenChatOptions.get(handler.getResponseResult(comp)).removeParent(handler.getInquiry());
+                    citizenChatOptions.get(handler.getResponseResult(comp)).removeParent(handler.getId());
                 }
             }
         }
@@ -1402,12 +1495,12 @@ public class CitizenData implements ICitizenData
     @Override
     public void triggerInteraction(@NotNull final IInteractionResponseHandler handler)
     {
-        if (!this.citizenChatOptions.containsKey(handler.getInquiry()))
+        if (!this.citizenChatOptions.containsKey(handler.getId()))
         {
-            this.citizenChatOptions.put(handler.getInquiry(), handler);
+            this.citizenChatOptions.put(handler.getId(), handler);
             for (final IInteractionResponseHandler childHandler : handler.genChildInteractions())
             {
-                this.citizenChatOptions.put(childHandler.getInquiry(), (ServerCitizenInteraction) childHandler);
+                this.citizenChatOptions.put(childHandler.getId(), (ServerCitizenInteraction) childHandler);
             }
             markDirty();
         }
@@ -1523,7 +1616,9 @@ public class CitizenData implements ICitizenData
             AttributeModifierUtils.addModifier(citizen, speedModifier, Attributes.MOVEMENT_SPEED);
 
             final AttributeModifier healthModLevel =
-              new AttributeModifier(HEALTH_BOOST.toString(), colony.getResearchManager().getResearchEffects().getEffectStrength(HEALTH_BOOST), AttributeModifier.Operation.ADDITION);
+              new AttributeModifier(HEALTH_BOOST.toString(),
+                colony.getResearchManager().getResearchEffects().getEffectStrength(HEALTH_BOOST),
+                AttributeModifier.Operation.ADDITION);
             AttributeModifierUtils.addHealthModifier(citizen, healthModLevel);
         }
     }
@@ -1549,6 +1644,8 @@ public class CitizenData implements ICitizenData
               Component.translatable(CITIZEN_NOT_GUARD_NEAR_HOME),
               ChatPriority.CHITCHAT));
         }
+
+        decreaseSaturation(workBuilding == null || workBuilding.getBuildingLevel() == 0 ? 1 : (SATURATION_DECREASE_FACTOR * Math.pow(2, workBuilding.getBuildingLevel())) * 2);
     }
 
     @Override
@@ -1665,5 +1762,72 @@ public class CitizenData implements ICitizenData
     public void setParents(final String firstParent, final String secondParent)
     {
         this.parents = new Tuple<>(firstParent, secondParent);
+    }
+
+    @Override
+    public void setIdleDays(final int days)
+    {
+
+    }
+
+    @Override
+    public void assignQuest(final IQuestInstance quest)
+    {
+        this.availableQuests.add(quest.getId());
+    }
+
+    @Override
+    public void openDialogue(final IQuestInstance quest, final int index)
+    {
+        final Component comp = Component.literal(quest.getId().toString());
+        if (IQuestManager.GLOBAL_SERVER_QUESTS.get(quest.getId()).getObjective(index) instanceof IQuestDeliveryObjective)
+        {
+            citizenChatOptions.put(comp, new QuestDeliveryInteraction(comp, ChatPriority.CHITCHAT, quest.getId(), index, this));
+        }
+        else
+        {
+            citizenChatOptions.put(comp, new QuestDialogueInteraction(comp, ChatPriority.CHITCHAT, quest.getId(), index, this));
+        }
+        this.markDirty();
+    }
+
+    @Override
+    public void addQuestParticipation(final IQuestInstance quest)
+    {
+        this.participatingQuests.add(quest.getId());
+    }
+
+    @Override
+    public void onQuestDeletion(final ResourceLocation questId)
+    {
+        this.availableQuests.remove(questId);
+        this.participatingQuests.remove(questId);
+    }
+
+    @Override
+    public boolean isParticipantOfQuest(final ResourceLocation questId)
+    {
+        return this.availableQuests.contains(questId) || this.participatingQuests.contains(questId);
+    }
+
+    @Override
+    public void onQuestCompletion(final ResourceLocation questId)
+    {
+        if (this.availableQuests.contains(questId))
+        {
+            this.availableQuests.remove(questId);
+            this.finishedQuests.add(questId);
+        }
+        else if (this.participatingQuests.contains(questId))
+        {
+            this.participatingQuests.remove(questId);
+            this.finishedQuestParticipation.add(questId);
+        }
+    }
+
+    @Override
+    public void onInteractionClosed(final Component key, final ServerPlayer sender)
+    {
+        citizenChatOptions.get(key).onClosed();
     }
 }
